# fsm

./: .gitignore  2025-07-27-fully-load-into-context-claudemd.txt  2025-07-29-clipr-do-a-quick-analysis-for-context.txt  2025-07-30-docsclaudemd-ensure-that-project-rules-are-enfo.txt  2025-07-30-docsclaudemd.txt  2025-07-31-caveat-the-messages-below-were-generated-by-the-u.txt  ARCHITECTURE.md  Analysis.md  CLAUDE.md  Cargo.toml  Design.md  Implementation.md  LOG_ANALYSIS.md  Makefile  Plan.md  README.md  ReadingLogs.md  Recipes.md  TRACING.md  Tmp_Impl.md  diff.rs  hints.rs  rustfmt.toml
.Documentation/: logging.md
.Documentation/controller/: actions.md  traits.md
.Documentation/controller/action_dispatcher/: clipboard_dispatcher.md
.Documentation/model/: command_palette.md  ui_state.md
.Documentation/tasks/: filename_search_task.md  metadata_task.md  size_task.md
.Documentation/util/: debounce.md  mod.md
.Documentation/view/components/: command_palette.md  filename_search_overlay.md  object_table.md  search_results_overlay.md  status_bar.md
.backup/: action_batcher.rs
DesignTimeline/: ADRs.md  Phase_1_0-2_4.md  Phase_3_0-3_5.md  Phase_4_0.md
Documentation/: config.md  error.md  lib.md  main.md
Documentation/cache/: cache_manager.md
Documentation/controller/: event_loop.md
Documentation/fs/: dir_scanner.md  object_info.md
Documentation/model/: app_state.md  fs_state.md
Documentation/tasks/: file_ops_task.md  search_task.md
Documentation/util/: humanize.md
Documentation/view/: icons.md  theme.md  traits.md  ui.md
Documentation/view/components/: command_completion.md  content_search_overlay.md  file_operations_overlay.md  help_overlay.md  input_prompt_overlay.md  loading_overlay.md  notification_overlay.md  prompt_bar.md  search_overlay.md
backup/src/: lib.rs
clipr/: Cargo.toml  Design.md
clipr/src/: clipboard.rs  config.rs  error.rs  item.rs  lib.rs  operations.rs  persistence.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_Clipr.md  Architecture.md  CLAUDE.md  COMMANDS.md  Profiling.md  TODO.md  TRACING.md  TRANSFORMATION_SUCCESS.md
fsm-core/: Cargo.toml
fsm-core/benches/: logging_benchmark.rs
fsm-core/logs/: fsm-core.tsv
fsm-core/logs/errors/: errors.json
fsm-core/src/: config.rs  error.rs  error_core.rs  lib.rs  logging.rs  logging_opt.rs  main.rs  printer.rs
fsm-core/src/cache/: cache_manager.rs
fsm-core/src/controller/: action_batcher.rs  action_dispatcher.rs  actions.rs  eactions.rs  ekey_processor.rs  esimd_matcher.rs  event_loop.rs  event_processor.rs  handler_registry.rs  state_coordinator.rs  state_provider.rs  traits.rs
fsm-core/src/controller/action_dispatcher/: clipboard_dispatcher.rs  command_dispatcher.rs  fs_dispatcher.rs  navigation_dispatcher.rs  search_dispatcher.rs  ui_dispatcher.rs  utils.rs
fsm-core/src/controller/handlers/: clipboard_handler.rs  file_ops_handler.rs  key_handler_orchestrator.rs  keyboard_handler.rs  mod.rs  navigation_handler.rs  search_handler.rs  system_handler.rs  utils.rs
fsm-core/src/fs/: dir_scanner.rs  object_info.rs  utils.rs
fsm-core/src/model/: app_state.rs  app_state_old.rs  command_palette.rs  fs_state.rs  loading_strategy.rs  metadata_manager.rs  metadata_manager_old.rs  object_registry.rs  shared_state.rs  ui_state.rs
fsm-core/src/operators/: file_system_operator.rs  filename_search_task.rs  metadata_task.rs  search_task.rs  size_task.rs  system_monitor_task.rs
fsm-core/src/profiling/: arc_monitor.rs  async_profiler.rs  collector.rs  exporters.rs  macros.rs  mod.rs  system_monitor.rs
fsm-core/src/tasks/: file_ops_task.rs  filename_search_task.rs  metadata_task.rs  search_task.rs  size_task.rs
fsm-core/src/util/: debounce.rs  humanize.rs
fsm-core/src/view/: snapshots.rs  theme.rs  traits.rs  ui.rs
fsm-core/src/view/components/: clipboard_overlay.rs  command_completion.rs  command_palette.rs  content_search_overlay.rs  error_overlay.rs  file_operations_overlay.rs  filename_search_overlay.rs  help_overlay.rs  input_prompt_overlay.rs  loading_overlay.rs  notification_overlay.rs  object_table.rs  prompt_bar.rs  search_overlay.rs  search_results_overlay.rs  status_bar.rs  system_monitor_overlay.rs
logs/: app.2025-07-22  app.json  app.jsonl  app.log.2025-07-22
logs/errors/: errors.json
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
src/cache/: cache_manager.rs
src/config/: config.rs
src/controller/: actions.rs  event_loop.rs
src/fs/: dir_scanner.rs  object_info.rs
src/model/: app_state.rs  command_palette.rs  fs_state.rs  ui_state.rs
src/tasks/: file_ops_task.rs  filename_search_task.rs  metadata_task.rs  search_task.rs  size_task.rs
src/util/: mod.rs
src/view/: icons.rs  theme.rs  traits.rs  ui.rs
src/view/components/: command_completion.rs  command_palette.rs  content_search_overlay.rs  file_operations_overlay.rs  filename_search_overlay.rs  help_overlay.rs  loading_overlay.rs  notification_overlay.rs  object_table.rs  prompt_bar.rs  search_overlay.rs  search_results_overlay.rs  status_bar.rs
