[workspace]
members = ["fsm-core"]
resolver = "2"

[workspace.dependencies]
ahash = { version = "0.8.12" }

# Core async and UI dependencies
tokio = { version = "1.47.1", features = [
    "full",
    "macros",
    "rt-multi-thread",
    "time",
] }

tokio-util = { version = "0.7.16", features = ["codec", "io"] }

futures = { version = "*" }

# Memory
memchr = "2.7.5"
memmap2 = "0.9.7"
bytes = "1.7.2"

ratatui = { version = "0.29.0", features = ["scrolling-regions"] } # Terminal UI
crossterm = { version = "0.29.0", features = ["event-stream"] }

# Serialization and configuration
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["indexmap"] }
toml = "0.9.5"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Utilities and system info
nanoid = { version = "0.4.0" }
uuid = "1.17.0"
bytesize = "2.0.1"
sysinfo = "0.36.1"
sys-info = { version = "*" }
directories = "6.0.0"
walkdir = "2.5.0"

# Logging and tracing
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "env-filter",
    "json",
    "serde",
    "serde_json",
    "fmt",
    "std",
] }

# Date/time handling
chrono = { version = "0.4.41", features = ["serde"] }
humantime-serde = "1.1.1"

# Performance and data structures
moka = { version = "0.12.10", features = ["future", "sync"] }
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
compact_str = { version = "0.9.0", features = [
    "bytes",
    "quickcheck",
    "rkyv",
    "smallvec",
    "zeroize",
    "serde",
] }
smallvec = { version = "1.15.1", features = ["union", "const_generics"] }
once_cell = { version = "1.21.3" }
simd-json = { version = "0.15.1", features = ["serde"] }
itoa = { version = "1.0.15" }
regex = { version = "1.11.1" }
hashbrown = { version = "*" }
slab = { version = "0.4.10" }
lru = { version = "0.16.0" }
rustc-hash = { version = "2.1.1" }
enum-map = { version = "2.7.3", features = ["serde"] }

# Additional utilities
ansi-to-tui = "7.0.0"
strip-ansi-escapes = "0.2.0"
tempfile = { version = "3.20.0" }

# Benchmarking
criterion = { version = "0.7.0" }

# Parallel Processing
rayon = { version = "1.10.0" }

# NOTE: paste dependency warning - transitive via ratatui 0.29.0
# Will be resolved when ratatui 0.30.0 stable is released (early 2025)
# paste crate is unmaintained but poses no security risk

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
