[workspace]
members = ["fsm-core"]
resolver = "2"

[workspace.dependencies]
ahash = { version = "0.8.12" }

# Core async and UI dependencies
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec", "io"] }
futures = { version = "0.3.31" }

# Memory
memchr = "2.7.5"
memmap2 = "0.9.7"
bytes = "1.10.1"

ratatui = { version = "0.29.0", features = ["scrolling-regions"] } # Terminal UI
crossterm = { version = "0.29.0", features = ["event-stream"] }

# Serialization and configuration
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["indexmap"] }
toml = "0.9.5"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Utilities and system info
nanoid = { version = "0.4.0" }
bytesize = "2.0.1"
sysinfo = "0.36.1"
directories = "6.0.0"

# Logging and tracing
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "env-filter",
    "json",
    "serde",
    "serde_json",
    "fmt",
    "std",
] }

# Date/time handling
chrono = { version = "0.4.41", features = ["serde"] }
humantime-serde = "1.1.1"

# Performance and data structures
moka = { version = "0.12.10", features = ["future", "sync"] }
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }
smallvec = { version = "1.15.1" }
once_cell = { version = "1.21.3" }
simd-json = { version = "0.15.1", features = ["serde"] }
itoa = { version = "1.0.15" }
enum-map = { version = "2.7.3", features = ["serde"] }

# Additional utilities
strip-ansi-escapes = "0.2.0"

# Parallel Processing
rayon = { version = "1.10.0" }

# Profiling dependencies
# csv = { version = "1.3" }

# NOTE: paste dependency warning - transitive via ratatui 0.29.0
# Will be resolved when ratatui 0.30.0 stable is released (early 2025)
# paste crate is unmaintained but poses no security risk

[profile.release]
opt-level = 3
lto = "thin"        # faster than “true” (fat LTO)
codegen-units = 1
strip = "debuginfo"


[profile.dev]
opt-level = 1          # small runtime win, compile still fast
debug = true
overflow-checks = true
incremental = true
codegen-units = 16     # default-ish; makes dev builds much faster
