[package]
name = "clipr"
version = "0.1.0"
edition = "2024"
description = "Advanced clipboard system for file managers"
license = "MIT"
authors = ["FSM Development Team"]

[dependencies]
# Use workspace dependencies for consistency
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }

# Standard library extensions
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.20.0"
