[package]
name = "clipr"
version = "0.1.0"
edition = "2024"
description = "Advanced clipboard system for file managers"
license = "MIT"
authors = ["FSM Development Team"]

[dependencies]
# Async runtime and concurrency
tokio = { workspace = true }
rayon = "1.10.0"
crossbeam = "0.8.4"

# Memory optimization and zero-copy
smallvec = { version = "1.15.1", features = ["union", "const_generics"] }
compact_str = { version = "0.9.0", features = ["serde"] }
bytes = "1.10.1"
memmap2 = "0.9.7"

# Fast hashing and collections
ahash = "0.8.12"
hashbrown = { version = "0.15.4", features = ["rayon"] }
indexmap = "2.10.0"

# Fast serialization
rmp-serde = "1.3.0" # MessagePack (faster than JSON/TOML)
bincode = "2.0.1"
futures = "0.3.31"

# SIMD and CPU optimization
bytemuck = "1.21.0"
memchr = "2.7.4"

# File system optimization
io-uring = { version = "0.7.9", optional = true }
libc = "0.2.174"

# Lock-free data structures
lockfree = "0.5.1"
atomic = "0.6.1"

# Performance monitoring
criterion = { version = "0.7.0", features = ["html_reports"] }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
num_cpus = "1.17.0"
directories.workspace = true
sys-info.workspace = true
tempfile = "3.20.0"
bytesize.workspace = true

[features]
default = ["fast-hash", "simd"]
fast-hash = []
simd = []
io-uring = ["dep:io-uring"]
