[package]
name = "fsm-core"
version = "1.0.0"
edition = "2024"

[dependencies]
# Clipboard crate dependency
clipr = { path = "../clipr" }

tokio = { version = "1.46.1", features = [
    "full",
    "macros",
    "rt-multi-thread",
    "time",
] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

# Serialization and configuration
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Utilities
tracing = "0.1.41"
tokio-util = { version = "0.7.15", features = ["codec", "io"] }

# Date/time handling
chrono = { version = "0.4.41", features = ["serde"] }
humantime-serde = "1.1.1"

# File operations and system utilities
walkdir = "2.5.0"
directories = "6.0.0"
bytesize = "2.0.1"

# Additional dependencies for main app
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "env-filter",
    "json",
    "serde",
    "serde_json",
    "time",
] }
ansi-to-tui = "7.0.0"
futures = "0.3.31"
moka = { version = "0.12.10", features = ["future"] }
sys-info = "0.9.1"


# Memory optimization and zero-copy
smallvec = { version = "1.15.1", features = ["union", "const_generics"] }
compact_str = { version = "0.9.0", features = ["serde"] }

# Fast serialization
rmp-serde = "1.3.0" # MessagePack (faster than JSON/TOML)
bincode = "2.0.1"

# Lock-free data structures
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }

# Concurrent HashMap
dashmap = "6.1.0"

# Data parallelism
rayon = "1.10.0"

# Lazy statics
once_cell = "1.21.3"

# Even faster hashing for small keys
enum-map = "2.7.3"
kanal = "0.1.1"
nanoid = "0.4.0"
regex = "1.11.1"
tempfile = "3.20.0"
futures-lite = "2.6.0"
parking_lot = "0.12.4"
arc-swap = "1.7.1"
ahash = "0.8.12"
crossbeam-channel = "0.5.15"
tracing-attributes = "0.1.30"

[[bin]]
name = "fs"
path = "src/main.rs"
